--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "vs-dataview",
   "displayName": "vs-dataview",
   "description": "markdown data tools",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "repository": "https://github.com/JamieThomasAnderson/vs-dataview.git",
   "engines": {
-    "vscode": "^1.96.0"
+    "vscode": ">=1.96.0"
   },
   "categories": [
     "Other"
